Solved an issue with the search form on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@
 }
 
 div.app-weather {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   place-content: center;
   background-color: #000;
