--- a/src/routes/Weather.css
+++ b/src/routes/Weather.css
@@ -1,6 +1,6 @@
 div.weather-box {
   width: 100vw;
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
